src/objects/Division__c.object
<CustomObject>
    <description>Divisions that comes under certain classes/standards</description>
    <fields>
        <fullName>Class__c</fullName>
        <description>Class with which this division is associated with</description>
        <inlineHelpText>Class with which this division is associated with</inlineHelpText>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Divisions</relationshipLabel>
        <relationshipName>Divisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TimeTableRecordCount__c</fullName>
        <description>No. of associated timetable records...</description>
        <inlineHelpText>No. of associated timetable records...</inlineHelpText>
        <label>TimeTableRecordCount</label>
        <summaryForeignKey>TimeTable__c.Division__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>attendance_reported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be checked on when attendance for the day is reported. User will not be able to re-report the attendance for the same day for the same division, if this is checked</description>
        <inlineHelpText>Will be checked on when attendance for the day is reported. User will not be able to re-report the attendance for the same day for the same division, if this is checked</inlineHelpText>
        <label>attendance reported</label>
        <type>Checkbox</type>
    </fields>
    <label>Division</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Division Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Divisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_add_division</fullName>
        <active>true</active>
        <description>Can not add new division as maximum count is reached...</description>
        <errorConditionFormula>AND(ISNEW(),Class__r.Actual_Division_Count__c  &gt;=  Class__r.Division_Count__c)</errorConditionFormula>
        <errorMessage>Can not add new division. Maximum limit reached.</errorMessage>
    </validationRules>
</CustomObject>